Error Mitigation/MagiCoder/Data/javax_management_openmbean/javax_management_openmbeanOutputResult.txt
Sample: ArrayType_5
----------------------------------------------------------------
output:
./Data/javax_management_openmbean/javaFiles/ArrayType_5.java:5: error: no suitable constructor found for ArrayType(int[],String,boolean)
        ArrayType arrayType1 = new ArrayType(new int[]{1, 2, 3}, "java.lang.String", true);
                               ^
    constructor ArrayType.ArrayType(int,OpenType) is not applicable
      (actual and formal argument lists differ in length)
    constructor ArrayType.ArrayType(SimpleType,boolean) is not applicable
      (actual and formal argument lists differ in length)
    constructor ArrayType.ArrayType(String,String,String,int,OpenType,boolean) is not applicable
      (actual and formal argument lists differ in length)
./Data/javax_management_openmbean/javaFiles/ArrayType_5.java:6: error: no suitable constructor found for ArrayType(int[],String,boolean)
        ArrayType arrayType2 = new ArrayType(new int[]{1, 2, 3}, "java.lang.String", true);
                               ^
    constructor ArrayType.ArrayType(int,OpenType) is not applicable
      (actual and formal argument lists differ in length)
    constructor ArrayType.ArrayType(SimpleType,boolean) is not applicable
      (actual and formal argument lists differ in length)
    constructor ArrayType.ArrayType(String,String,String,int,OpenType,boolean) is not applicable
      (actual and formal argument lists differ in length)
./Data/javax_management_openmbean/javaFiles/ArrayType_5.java:7: error: no suitable constructor found for ArrayType(int[],String,boolean)
        ArrayType arrayType3 = new ArrayType(new int[]{1, 2, 3}, "java.lang.Integer", true);
                               ^
    constructor ArrayType.ArrayType(int,OpenType) is not applicable
      (actual and formal argument lists differ in length)
    constructor ArrayType.ArrayType(SimpleType,boolean) is not applicable
      (actual and formal argument lists differ in length)
    constructor ArrayType.ArrayType(String,String,String,int,OpenType,boolean) is not applicable
      (actual and formal argument lists differ in length)
3 errors


================================================================

Sample: ArrayType_6
----------------------------------------------------------------
output:
./Data/javax_management_openmbean/javaFiles/ArrayType_6.java:8: error: no suitable constructor found for ArrayType(SimpleType<Double>,int[])
        ArrayType arrayType = new ArrayType(SimpleType.DOUBLE, new int[]{2, 2});
                              ^
    constructor ArrayType.ArrayType(int,OpenType) is not applicable
      (argument mismatch; SimpleType<Double> cannot be converted to int)
    constructor ArrayType.ArrayType(SimpleType,boolean) is not applicable
      (argument mismatch; int[] cannot be converted to boolean)
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


================================================================

Sample: ArrayType_7
----------------------------------------------------------------
output:
./Data/javax_management_openmbean/javaFiles/ArrayType_7.java:9: error: no suitable constructor found for ArrayType(SimpleType<Double>,int[])
        ArrayType arrayType = new ArrayType(SimpleType.DOUBLE, new int[]{2, 2});
                              ^
    constructor ArrayType.ArrayType(int,OpenType) is not applicable
      (argument mismatch; SimpleType<Double> cannot be converted to int)
    constructor ArrayType.ArrayType(SimpleType,boolean) is not applicable
      (argument mismatch; int[] cannot be converted to boolean)
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


================================================================

Sample: CompositeDataSupport_6
----------------------------------------------------------------
output:
./Data/javax_management_openmbean/javaFiles/CompositeDataSupport_6.java:7: error: incompatible types: String cannot be converted to CompositeType
            "type1",
            ^
./Data/javax_management_openmbean/javaFiles/CompositeDataSupport_6.java:13: error: incompatible types: String cannot be converted to CompositeType
            "type1",
            ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors


================================================================

Sample: CompositeDataSupport_23
----------------------------------------------------------------
output:
./Data/javax_management_openmbean/javaFiles/CompositeDataSupport_23.java:11: error: constructor CompositeType in class CompositeType cannot be applied to given types;
        CompositeType compositeType = new CompositeType(
                                      ^
  required: String,String,String[],String[],OpenType<?>[]
  found:    String,String,String[],String[],OpenType[],boolean
  reason: actual and formal argument lists differ in length
./Data/javax_management_openmbean/javaFiles/CompositeDataSupport_23.java:20: error: no suitable constructor found for CompositeDataSupport(CompositeType)
        CompositeDataSupport compositeData = new CompositeDataSupport(compositeType);
                                             ^
    constructor CompositeDataSupport.CompositeDataSupport(CompositeType,String[],Object[]) is not applicable
      (actual and formal argument lists differ in length)
    constructor CompositeDataSupport.CompositeDataSupport(CompositeType,Map<String,?>) is not applicable
      (actual and formal argument lists differ in length)
    constructor CompositeDataSupport.CompositeDataSupport(SortedMap<String,Object>,CompositeType) is not applicable
      (actual and formal argument lists differ in length)
./Data/javax_management_openmbean/javaFiles/CompositeDataSupport_23.java:21: error: cannot find symbol
        compositeData.set("myString", "Hello");
                     ^
  symbol:   method set(String,String)
  location: variable compositeData of type CompositeDataSupport
./Data/javax_management_openmbean/javaFiles/CompositeDataSupport_23.java:22: error: cannot find symbol
        compositeData.set("myInteger", 123);
                     ^
  symbol:   method set(String,int)
  location: variable compositeData of type CompositeDataSupport
4 errors


================================================================

Sample: TabularDataSupport_3
----------------------------------------------------------------
output:
./Data/javax_management_openmbean/javaFiles/TabularDataSupport_3.java:8: error: no suitable constructor found for TabularDataSupport(no arguments)
        TabularDataSupport tabularData = new TabularDataSupport();
                                         ^
    constructor TabularDataSupport.TabularDataSupport(TabularType) is not applicable
      (actual and formal argument lists differ in length)
    constructor TabularDataSupport.TabularDataSupport(TabularType,int,float) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: TabularDataSupport_5
----------------------------------------------------------------
output:
./Data/javax_management_openmbean/javaFiles/TabularDataSupport_5.java:5: error: no suitable constructor found for TabularDataSupport(no arguments)
        TabularDataSupport tabularDataSupport = new TabularDataSupport();
                                                ^
    constructor TabularDataSupport.TabularDataSupport(TabularType) is not applicable
      (actual and formal argument lists differ in length)
    constructor TabularDataSupport.TabularDataSupport(TabularType,int,float) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

